--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,5 @@
-// for future theming
-@import "bootstrap/scss/bootstrap";
+/* for future theming */
+@import "~bootstrap/scss/bootstrap";
 
 body {
   padding-top: 5rem;
