login/register form update

--- a/views/layouts/application.pug
+++ b/views/layouts/application.pug
@@ -4,6 +4,7 @@ doctype html
 html(lang="en")
   head
     title= Title
+    meta(content='width=device-width, initial-scale=1.0' name='viewport')
     script(src='/assets/main.js')
   body
     nav.navbar.navbar-expand-md.navbar-dark.bg-dark
