--- a/views/users/new.pug
+++ b/views/users/new.pug
@@ -1,7 +1,7 @@
 extends /layouts/application.pug
 
 block content
-  +formFor(f, { url: urlFor('users'), method: 'post' })
+  +formFor(f, { url: urlFor('users'), method: 'post', header: 'Join Task Manager!' })
     +input(f, 'email')
     +input(f, 'firstName')
     +input(f, 'lastName')
