--- a/views/layouts/application.pug
+++ b/views/layouts/application.pug
@@ -6,6 +6,7 @@ html(lang="en")
     title= Title
     meta(content='width=device-width, initial-scale=1.0' name='viewport')
     script(src='/assets/main.js')
+    script(src='/assets/vendor.js')
   body
     nav.navbar.navbar-expand-md.navbar-dark.bg-dark
       a.navbar-brand.mr-4(href="/") Task Manager
