--- a/views/layouts/application.pug
+++ b/views/layouts/application.pug
@@ -26,9 +26,15 @@ html(lang="en")
           li.nav-item
         ul.navbar-nav
           if isSignedIn()
-            form.form-inline.d-inline-block(action= urlFor('session') method='post')
-                input(name='_method' type='hidden' value='delete')
-                button.btn.btn-outline-light(type='submit') Sign Out
+            .dropdown
+              button.btn.btn-outline-light.dropdown-toggle#dropdownMenuButton(
+                type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+              ) Profile
+              .dropdown-menu.dropdown-menu-right(aria-labelledby="dropdownMenuButton")
+                a.dropdown-item(href= urlFor('userProfile')) Settings
+                a.dropdown-item.disabled(href="#") My tasks
+                .dropdown-divider
+                a.dropdown-item(href= urlFor('session') data-method='delete' rel='nofollow') Sign out
           else
             li.nav-item
               a.nav-link.text-light.mr-2(href=urlFor('newSession')) Sign In
