--- a/views/users/new.pug
+++ b/views/users/new.pug
@@ -4,7 +4,7 @@ block signForm-content
   h1.h3.mb-4.mt-3= 'Join Task Manager!'
   +formFor(f, { url: urlFor('users'), method: 'post' })
     block form-content
-      +input(f, 'email')
+      +input(f, 'email', { as: 'email'})
       +input(f, 'firstName')
       +input(f, 'lastName')
       +input(f, 'password', { as: 'password' })
