--- a/views/layouts/application.pug
+++ b/views/layouts/application.pug
@@ -1,38 +1,38 @@
 include /mixins/forms.pug
+include /mixins/index.pug
 
 doctype html
-html(lang="en")
+html(lang='en')
   head
     title= Title
     meta(content='width=device-width, initial-scale=1.0' name='viewport')
-    script(src='/assets/main.js')
-    script(src='/assets/vendor.js')
+    link(rel='stylesheet' href='/assets/styles.css')
   body
     nav.navbar.navbar-expand-md.navbar-dark.bg-dark
-      a.navbar-brand.mr-4(href="/") Task Manager
-      button.navbar-toggler(
-        type = "button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      )
+      a.navbar-brand.mr-4(href='/') Task Manager
+      button.navbar-toggler(type = 'button' data-toggle='collapse' data-target='#navbarSupportedContent')
         span.navbar-toggler-icon
       .collapse.navbar-collapse#navbarSupportedContent
         ul.navbar-nav.mr-auto
           li.nav-item
             a.nav-link.text-light(href=urlFor('users')) Users
           li.nav-item
+            a.nav-link.text-light(href= urlFor('tasks')) Tasks
+          li.nav-item
+            a.nav-link.text-light(href= urlFor('taskStatuses')) Task statuses
         ul.navbar-nav
           if isSignedIn()
-            .dropdown
-              button.btn.btn-outline-light.dropdown-toggle#dropdownMenuButton(
-                type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-              ) Profile
-              .dropdown-menu.dropdown-menu-right(aria-labelledby="dropdownMenuButton")
+            li.nav-item.dropdown
+              button.btn.dropdown-toggle.text-light#dropdownMenuTaskButton(type='button' data-toggle='dropdown')
+                span.oi.oi-plus
+              .dropdown-menu.dropdown-menu-right(aria-labelledby='dropdownMenuTaskButton')
+                a.dropdown-item(href= urlFor('newTask')) Add task
+                a.dropdown-item(href= urlFor('newStatus')) Add task status
+            li.nav-item.dropdown
+              button.btn.btn-outline-light.dropdown-toggle#dropdownMenuButton(type='button' data-toggle='dropdown') Profile
+              .dropdown-menu.dropdown-menu-right(aria-labelledby='dropdownMenuButton')
                 a.dropdown-item(href= urlFor('userProfile')) Settings
-                a.dropdown-item.disabled(href="#") My tasks
+                a.dropdown-item.disabled(href='#') My tasks
                 .dropdown-divider
                 a.dropdown-item(href= urlFor('session') data-method='delete' rel='nofollow') Sign out
           else
@@ -40,9 +40,12 @@ html(lang="en")
               a.nav-link.text-light.mr-2(href=urlFor('newSession')) Sign In
             li.nav-item
               a.btn.btn-outline-light(href=urlFor('newUser')) Sign Up
-    .container
-      - const msg = flash.get()
-      if msg
-        .alert.alert-info.m-3= msg
-      .mt-5
-        block content
+    - const msg = flash.get()
+    if msg
+      .alert.alert-info.alert-dismissable.fade.show.mx-5.my-2= msg
+        button.close(type="button" data-dismiss="alert" aria-label="Close")
+          span(aria-hidden="true") &times;
+    block content
+  footer
+    script(src='/assets/main.js')
+    script(src='/assets/styles.js')
