--- a/views/taskStatuses/index.pug
+++ b/views/taskStatuses/index.pug
@@ -1,1 +1,19 @@
-// index
+extends /layouts/application.pug
+
+block content
+  .row.mt-3.justify-content-center
+    .col-12.col-md-6
+      .card
+        .card-header Task statuses
+        .list-group.list-group-flush
+          each status in taskStatuses
+            .row.p-2
+              .col-10
+                a.list-group-item.list-group-item-action(href= urlFor('tasks', { query: { statusId: status.id } }))= status.name
+              if isSignedIn()
+                - const target = `status${status.id}`
+                .col-2
+                  .row
+                    a.btn.btn-sm.btn-primary(href= urlFor('statusSettings', { id: status.id  }) method='get' rel='nofollow') Edit
+                    button.btn.btn-sm.btn-danger.ml-1(type='button' data-toggle='modal' data-target= `#${target}`) Delete
+                    +modal({ target, name: 'status', url: urlFor('deleteStatus', { id: status.id  }) })
