--- a/views/welcome/index.pug
+++ b/views/welcome/index.pug
@@ -1,4 +1,7 @@
 extends /layouts/application.pug
 
 block content
-  h3 index!
+  .row.justify-content-center.mt-4
+    .jumbotron
+      h1.display-4 Welcome to the Task Manager
+      p.lead This is the title page
