--- a/views/layouts/application.pug
+++ b/views/layouts/application.pug
@@ -42,10 +42,12 @@ html(lang='en')
               a.btn.btn-outline-light(href=urlFor('newUser')) Sign Up
     - const msg = flash.get()
     if msg
-      .alert.alert-info.alert-dismissable.fade.show.mx-5.my-2= msg
+      .alert.alert-info.alert-dismissable.fade.show.px-5.py-2= msg
         button.close(type="button" data-dismiss="alert" aria-label="Close")
           span(aria-hidden="true") &times;
     block content
-  footer
-    script(src='/assets/main.js')
-    script(src='/assets/styles.js')
+    // .footer.container-lg.px-3
+    //   .position-relative.d-flex.flex-justify-between.pt-6.pb-2.mt-6.f6.text-gray.border-top.border-gray-light
+    //     span hey
+  script(src='/assets/main.js')
+  script(src='/assets/styles.js')
