--- a/views/taskStatuses/index.pug
+++ b/views/taskStatuses/index.pug
@@ -1,19 +1,17 @@
-extends /layouts/application.pug
+extends /layouts/tables.pug
 
-block content
-  .row.mt-3.justify-content-center
-    .col-12.col-md-6
-      .card
-        .card-header Task statuses
-        .list-group.list-group-flush
-          each status in taskStatuses
-            .row.p-2
-              .col-10
-                a.list-group-item.list-group-item-action(href= urlFor('tasks', { query: { statusId: status.id } }))= status.name
-              if isSignedIn()
-                - const target = `status${status.id}`
-                .col-2
-                  .row
-                    a.btn.btn-sm.btn-primary(href= urlFor('statusEdit', { id: status.id  }) method='get' rel='nofollow') Edit
-                    button.btn.btn-sm.btn-danger.ml-1(type='button' data-toggle='modal' data-target= `#${target}`) Delete
-                    +modal({ target, name: 'status', url: urlFor('deleteStatus', { id: status.id  }) })
+block table-content
+  .card.mt-3
+    .card-header Task statuses
+    .list-group.list-group-flush
+      each status in taskStatuses
+        .row.p-2
+          .col-10
+            a.list-group-item.list-group-item-action(href= urlFor('tasks', { query: { statusId: status.id } }))= status.name
+          if isSignedIn()
+            - const target = `status${status.id}`
+            .col-2
+              .row
+                a.btn.btn-sm.btn-primary(href= urlFor('statusEdit', { id: status.id  }) method='get' rel='nofollow') Edit
+                button.btn.btn-sm.btn-danger.ml-1(type='button' data-toggle='modal' data-target= `#${target}`) Delete
+                +modal({ target, name: 'status', url: urlFor('deleteStatus', { id: status.id  }) })
