--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,26 +1,23 @@
-extends /layouts/application.pug
+extends /layouts/tables.pug
 
-block content
-  .row.bg-light.pt-2.px-2
-    .col-0.col-md-2
-    .col-12.col-md-5
-      nav
-        ol.breadcrumb.bg-light
-          li.breadcrumb-item
-            a(href= urlFor('users')) Users /
-  .row.my-3
-    .col-0.col-md-2
-    .col-12.col-md-8
-      table.table.table-stripped
-        thead
-          tr
-            th Full Name
-            th Email
-            th Created At
-        tbody
-          each user in users
-            tr
-              td
-                a(href= urlFor('showUser', { id: user.id }))= user.fullName
-              td= user.email
-              td= formatDate(user.createdAt)
+block table-content
+    .row.mt-3
+      .col-12.m-0
+        .card.mb-3
+            .card-body.p-0
+                table.table.table-hover.table-borderless.p-0.m-0(style={'font-size': '.875rem'})
+                  thead.thead-light
+                    tr
+                      th Full Name
+                      th Email
+                      th Created At
+                  tbody
+                    each user in users
+                      tr
+                        td
+                          a(href= urlFor('showUser', { id: user.id }))= user.fullName
+                        td= user.email
+                        td= formatDate(user.createdAt)
+    .row
+      .col-12
+        +pagination('users', paginationObject)
